<resources>
    <string name="app_name">StepIt</string>

    <string name="fit_bit">FitBit</string>
    <string name="google_fit">Google Fit</string>
    <string name="android_wearable">Android Wearable</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_message">Not a member? Sign up for free!</string>
    <string name="login_message">Already a member? Sign in&#8230;</string>

    <string name="sign_up">Sign up</string>
    <string name="full_name">First and last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="step_it_sign_up">StepIt Sign Up</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="error_logging_into_account">An error occurred while attempting to login to your account. Please try again later.</string>
    <string name="error_incorrect_email_or_password">Invalid email address or password. Please try again.</string>
    <string name="error_creating_account">An error occurred while attempting to create your account. Please try again later.</string>
    <string name="sign_out">Sign Out</string>
    <string name="device">Device</string>
    <string name="please_select_your_device">Please select your device</string>
    <string name="warning">Warning</string>
    <string name="device_already_connected">You already have a device connected. Would you like to disconnect your current device, and connect a different one?</string>
    <string name="google_fit_device">Google Fit Device</string>
    <string name="fit_bit_device">FitBit Device</string>
    <string name="step_count">%1$s steps</string>
    <string name="unknown_error">Oops! An unknown error has occured. Please try again later.</string>
    <string name="participants">Participants: %1$s</string>
    <string name="created_by">Created by: %1$s</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="create">Create</string>
    <string name="empty_date">%1$d-%2$d-%3$d</string>

</resources>
