<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_fragment_background">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <Spinner
        android:id="@+id/spinSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:inputType="date"/>

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:inputType="date"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"/>

</LinearLayout>